file(GLOB_RECURSE SOURCES "*.c*")
file(GLOB SCRIPT_SOURCES "*.lua")
file(GLOB PREFAB_SOURCES "*.prefab")
add_executable(dota_pubg ${SOURCES} ${SCRIPT_SOURCES} ${PREFAB_SOURCES})
source_group("src" FILES ${SOURCES})
source_group("scripts" FILES ${SCRIPT_SOURCES})
source_group("prefabs" FILES ${PREFAB_SOURCES})
set_target_properties(dota_pubg PROPERTIES FOLDER "games")
target_link_libraries(dota_pubg flame_universe)
set_target_properties(dota_pubg PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
