file(GLOB_RECURSE source_files "*.c*")
file(GLOB_RECURSE script_files "scripts/*.lua")
file(GLOB_RECURSE prefab_files "prefabs/*.prefab")
add_executable(dota_pubg ${source_files} ${script_files} ${prefab_files})
source_group("src" FILES ${source_files})
source_group("scripts" FILES ${script_files})
source_group("prefabs" FILES ${prefab_files})
set_target_properties(dota_pubg PROPERTIES FOLDER "games")
target_link_options(dota_pubg PRIVATE /FIXED:NO)
target_link_libraries(dota_pubg flame_universe)
set_target_properties(dota_pubg PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
