generate_config()
file(GLOB_RECURSE source_files "*.h*" "*.c*")
add_executable(tetris ${source_files})
set_target_properties(tetris PROPERTIES FOLDER "games")
target_link_options(tetris PRIVATE /FIXED:NO)
target_link_libraries(tetris flame_universe)
add_custom_command(TARGET tetris POST_BUILD COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/assets & pack_atlas.bat)
add_dependencies(tetris typeinfogen_dep)
add_dependencies(tetris texture_packer)
