get_filename_component(DIR ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE INCLUDES "${INCLUDE_DIR}/${DIR}/*.h*")
file(GLOB_RECURSE SOURCES "*.h*" "*.c*")
add_library(flame_blueprint SHARED ${INCLUDES} ${SOURCES})
add_typeinfo_support(flame_blueprint "${CMAKE_CURRENT_SOURCE_DIR}typeinfogen.desc")
set_target_properties(flame_blueprint PROPERTIES FOLDER "flame")
target_compile_definitions(flame_blueprint PRIVATE FLAME_BLUEPRINT_MODULE)
target_include_directories(flame_blueprint PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(flame_blueprint flame_foundation)
