get_filename_component(DIR ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE INCLUDES "${INCLUDE_DIR}/${DIR}/*.h*")
file(GLOB_RECURSE SOURCES "*.h*" "*.c*")
add_library(flame_blueprint SHARED ${INCLUDES} ${SOURCES})
set_target_properties(flame_blueprint PROPERTIES FOLDER "flame")
set_target_properties(flame_blueprint PROPERTIES LINK_FLAGS "/INCREMENTAL:NO")
target_compile_definitions(flame_blueprint PRIVATE FLAME_BLUEPRINT_MODULE)
target_include_directories(flame_blueprint PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(flame_blueprint flame_foundation)
add_dependencies(flame_blueprint typeinfogen_dep)
add_custom_command(TARGET flame_blueprint POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_blueprint> -d "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")
