file(GLOB source_files "*.h*" "*.c*")
add_library(flame_blueprint SHARED ${source_files})
set_target_properties(flame_blueprint PROPERTIES FOLDER "flame")
target_compile_definitions(flame_blueprint PRIVATE FLAME_BLUEPRINT_MODULE)
target_link_libraries(flame_blueprint flame_foundation)
add_dependencies(flame_blueprint typeinfogen_dep)
add_custom_command(TARGET flame_blueprint POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_blueprint> -d "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")

file(GLOB PUBLIC_HEADER "*.h*")
list(FILTER PUBLIC_HEADER EXCLUDE REGEX ".*_private[.]h$")
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame/blueprint")
add_custom_command(TARGET flame_blueprint PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PUBLIC_HEADER} "${CMAKE_SOURCE_DIR}/include/flame/blueprint")
