file(GLOB SOURCES "*.h*" "*.c*")
add_library(flame_database SHARED ${SOURCES})
set_target_properties(flame_database PROPERTIES FOLDER "flame")
set_target_properties(flame_database PROPERTIES LINK_FLAGS "/INCREMENTAL:NO")
target_compile_definitions(flame_database PRIVATE FLAME_DATABASE_MODULE)
target_link_libraries(flame_database flame_foundation)
if(USE_MYSQL)
	target_compile_definitions(flame_database PRIVATE USE_MYSQL)
	target_include_directories(flame_database PRIVATE "${MYSQL_INCLUDE_DIR}")
	target_link_libraries(flame_database "${MYSQL_STATIC_LIBRARY_PATH}")
	add_custom_command(TARGET flame_database POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MYSQL_DYNAMIC_LIBRARY_PATH}" "${CMAKE_SOURCE_DIR}/bin/debug")
endif()
add_dependencies(flame_database typeinfogen_dep)
add_custom_command(TARGET flame_database POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_database> -d "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")

file(GLOB PUBLIC_HEADER "*.h*")
list(FILTER PUBLIC_HEADER EXCLUDE REGEX ".*_private[.]h$")
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame/database")
add_custom_command(TARGET flame_database POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PUBLIC_HEADER} "${CMAKE_SOURCE_DIR}/include/flame/database")
