file(GLOB source_files "*.h*" "*.c*")
add_library(flame_foundation SHARED ${source_files})
set_target_properties(flame_foundation PROPERTIES FOLDER "flame")
target_compile_definitions(flame_foundation PRIVATE FLAME_FOUNDATION_MODULE)
target_include_directories(flame_foundation PUBLIC "${GLM_INCLUDE_DIR}")
target_include_directories(flame_foundation PUBLIC "${PUGIXML_INCLUDE_DIR}")
target_include_directories(flame_foundation PUBLIC "${NJSON_INCLUDE_DIR}")
target_include_directories(flame_foundation PUBLIC "${CPPCODEC_INCLUDE_DIR}")
target_include_directories(flame_foundation PUBLIC "${BOOST_REGEX_INCLUDE_DIR}")
target_include_directories(flame_foundation PRIVATE "${STB_INCLUDE_DIR}")
target_include_directories(flame_foundation PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(flame_foundation ws2_32.lib)
target_link_libraries(flame_foundation imagehlp.lib)
target_link_libraries(flame_foundation debug "${PUGIXML_DEBUG_LIB}")
target_link_libraries(flame_foundation optimized "${PUGIXML_RELEASE_LIB}")

if (USE_SHA1)
	target_compile_definitions(flame_foundation PRIVATE USE_SHA1)
	target_include_directories(flame_foundation PRIVATE "${SHA1_INCLUDE_DIR}")
else()
	message(STATUS "foundation module: SHA1 is required for websocket")
endif()

if (USE_MYSQL)
	target_compile_definitions(flame_foundation PRIVATE USE_MYSQL)
	target_include_directories(flame_foundation PRIVATE "${MYSQL_INCLUDE_DIR}")
	target_link_libraries(flame_foundation "${MYSQL_LIB_PATH}")
	add_custom_command(TARGET flame_foundation POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MYSQL_DLL_PATH}" $(TargetDir))
else()
	message(STATUS "foundation module: MYSQL is required for database connection")
endif()

file(GLOB PUBLIC_HEADER "../*.h*")
list(FILTER PUBLIC_HEADER EXCLUDE REGEX ".*_private[.]h$")
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame")
add_custom_command(TARGET flame_foundation PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PUBLIC_HEADER} "${CMAKE_SOURCE_DIR}/include/flame")

file(GLOB PUBLIC_HEADER "*.h*")
list(FILTER PUBLIC_HEADER EXCLUDE REGEX ".*_private[.]h$")
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame/foundation")
add_custom_command(TARGET flame_foundation PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PUBLIC_HEADER} "${CMAKE_SOURCE_DIR}/include/flame/foundation")
