if (USE_IMGUI)
	set(config_file "${CMAKE_CURRENT_SOURCE_DIR}/config.h")
	set(source_files "${config_file};${IMGUI_DIR}/imconfig.h;${IMGUI_DIR}/imgui.h;${IMGUI_DIR}/imgui.cpp;${IMGUI_DIR}/imgui_draw.cpp;${IMGUI_DIR}/imgui_widgets.cpp;${IMGUI_DIR}/imgui_tables.cpp;${IMGUI_DIR}/misc/cpp/imgui_stdlib.h;${IMGUI_DIR}/misc/cpp/imgui_stdlib.cpp")
	if (USE_IM_FILE_DIALOG)
		set(imfiledialog_files "${IM_FILE_DIALOG_DIR}/ImFileDialog.h;${IM_FILE_DIALOG_DIR}/ImFileDialog.cpp")
	endif()
	add_library(imgui ${source_files} ${imfiledialog_files})
	set_target_properties(imgui PROPERTIES FOLDER "flame")
	target_compile_definitions(imgui PUBLIC IMGUI_USER_CONFIG="${config_file}")
	target_include_directories(imgui PUBLIC "${IMGUI_DIR}")
	target_include_directories(imgui PRIVATE "${GLM_INCLUDE_DIR}")
	if (USE_IM_FILE_DIALOG)
		target_include_directories(imgui PUBLIC "${IM_FILE_DIALOG_DIR}")
		target_include_directories(imgui PRIVATE "${STB_INCLUDE_DIR}")
	endif()
endif()
