file(GLOB SOURCES "*.h*" "*.c*")
add_library(flame_physics SHARED ${SOURCES})
set_target_properties(flame_physics PROPERTIES FOLDER "flame")
set_target_properties(flame_physics PROPERTIES LINK_FLAGS "/INCREMENTAL:NO")
target_compile_definitions(flame_physics PRIVATE FLAME_PHYSICS_MODULE)
target_link_libraries(flame_physics flame_graphics)
if (USE_PHYSX)
	target_compile_definitions(flame_physics PRIVATE USE_PHYSX)
	target_include_directories(flame_physics PRIVATE "${PHYSX_INCLUDE_DIR}")
	target_include_directories(flame_physics PRIVATE "${PHYSX_INCLUDE_DIR}/../../pxshared/include")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXFoundation_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysX_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXCommon_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXCooking_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXExtensions_static_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXPvdSDK_static_64.lib")
	target_link_libraries(flame_physics "${PHYSX_LIBRARY_DIR}/PhysXCharacterKinematic_static_64.lib")
	add_custom_command(TARGET flame_physics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${PHYSX_LIBRARY_DIR}/PhysXFoundation_64.dll" $(TargetDir))
	add_custom_command(TARGET flame_physics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${PHYSX_LIBRARY_DIR}/PhysX_64.dll" $(TargetDir))
	add_custom_command(TARGET flame_physics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${PHYSX_LIBRARY_DIR}/PhysXCommon_64.dll" $(TargetDir))
	add_custom_command(TARGET flame_physics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${PHYSX_LIBRARY_DIR}/PhysXCooking_64.dll" $(TargetDir))
endif()
add_dependencies(flame_physics typeinfogen_dep)
add_custom_command(TARGET flame_physics POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_physics> -d "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")

file(GLOB PUBLIC_HEADER "*.h*")
list(FILTER PUBLIC_HEADER EXCLUDE REGEX ".*_private[.]h$")
file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/include/flame/physics")
add_custom_command(TARGET flame_physics POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PUBLIC_HEADER} "${CMAKE_SOURCE_DIR}/include/flame/physics")
