get_filename_component(DIR ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE INCLUDES "${INCLUDE_DIR}/${DIR}/*.h*")
file(GLOB_RECURSE SOURCES "*.h*" "*.c*")
add_library(flame_sound SHARED ${INCLUDES} ${SOURCES})
add_typeinfo_support(flame_sound "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")
set_target_properties(flame_sound PROPERTIES FOLDER "flame")
target_compile_definitions(flame_sound PRIVATE FLAME_SOUND_MODULE)
target_include_directories(flame_sound PRIVATE "${OPENAL_INCLUDE_DIR}")
target_include_directories(flame_sound PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(flame_sound "${OPENAL_STATIC_LIBRARY_PATH}")
target_link_libraries(flame_sound flame_foundation)
