get_filename_component(DIR ${CMAKE_CURRENT_SOURCE_DIR} NAME)
file(GLOB_RECURSE INCLUDES "${INCLUDE_DIR}/${DIR}/*.h*")
file(GLOB_RECURSE SOURCES "*.h*" "*.c*")
add_library(flame_sound SHARED ${INCLUDES} ${SOURCES})
set_target_properties(flame_sound PROPERTIES FOLDER "flame")
set_target_properties(flame_sound PROPERTIES LINK_FLAGS "/INCREMENTAL:NO")
target_compile_definitions(flame_sound PRIVATE FLAME_SOUND_MODULE)
target_include_directories(flame_sound PRIVATE "${OPENAL_INCLUDE_DIR}")
target_include_directories(flame_sound PUBLIC "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(flame_sound "${OPENAL_STATIC_LIBRARY_PATH}")
target_link_libraries(flame_sound flame_foundation)
add_dependencies(flame_sound typeinfogen_dep)
add_custom_command(TARGET flame_sound POST_BUILD COMMAND $<TARGET_FILE:typeinfogen> -i $<TARGET_FILE:flame_sound> -d "${CMAKE_CURRENT_SOURCE_DIR}/typeinfo.desc")
